# gmk87-node

./: .gitignore  README.md  linux-setup.txt  package-lock.json  package.json
.github/workflows/: build.yml
electron/: main.cjs
electron/renderer/: styles.css
electron/renderer/components/: toast.js
electron/renderer/views/: upload.js
scripts/: apply-via-gmk87-patches.mjs  build-via-definitions.mjs  copy-via-dist.mjs  patch-via-bundle.mjs  setup-via.mjs  sync-via-public.mjs
src/: api.js  app.js  gmk87-bridge.js  index.html  sendImageMagick.js  styles.css
src-tauri/: Cargo.toml  presets.json  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: default.json
src-tauri/permissions/: allow-app-commands.toml
src-tauri/src/: lib.rs  main.rs
src-tauri/src/gmk87/: cache.rs  config.rs  constants.rs  device.rs  image.rs  mod.rs  upload.rs  util.rs
src/components/: shell.js  sidebar.js  stage.js
src/definitions/: hash.json  supported_kbs.json
src/definitions/v2/: 839864405.json  839864456.json
src/lib/: device.js
src/via/definitions/: supported_kbs.json
src/via/definitions/v2/: 839864405.json  839864456.json
src/views/: colors.js  home.js  timesync.js  upload.js  via.js
via-definitions/: 2.4g.json  wired.json
