[package]
name = "gmk87-configurator"
version = "1.0.4"
description = "GMK87 Configurator - portable Tauri app"
authors = ["Codedgar"]
edition = "2021"

[lib]
name = "gmk87_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hidapi = "2.6"
image = { version = "0.25", features = ["gif", "png", "jpeg", "bmp"] }
gif = "0.13"
chrono = { version = "0.4", features = ["clock"] }
directories = "5"
